--- a/Assignment_MLE501.ipynb
+++ b/Assignment_MLE501.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjHswLI5A3ma47F9/Fzz+6",
+      "authorship_tag": "ABX9TyOwqjv3aXxpsHGnPBnwYxng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1279,7 +1279,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### So với model ban đầu, model được cải tiến bằng Regularization đã có sự cải thiện về độ chính xác, cụ thể ở đây em dùng kỹ thuật L2 Regularization. Sự thay đổi tạo ra từ việc thêm một thành phần bình phương của các trọng số vào hàm mất mát. Việc này sẽ làm cho các trọng số nhỏ hơn, dẫn đến mô hình đơn giản hơn và tránh được việc bị overfitting."
+        "### So với model ban đầu, model được cải tiến bằng Regularization đã có sự thay đổi về độ chính xác, cụ thể ở đây em dùng kỹ thuật L2 Regularization. Sự thay đổi tạo ra từ việc thêm một thành phần bình phương của các trọng số vào hàm mất mát. Việc này sẽ làm cho các trọng số nhỏ hơn, dẫn đến mô hình đơn giản hơn và tránh được việc bị overfitting."
       ],
       "metadata": {
         "id": "KfyDN-5Cf0zY"
@@ -1585,7 +1585,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### So với model ban đầu, model được cải tiến bằng Regularization đã có sự cải thiện về độ chính xác, cụ thể ở đây em thay đổi optimizer từ Adam sang RMSprop. Thuật toán tối ưu mô hình sẽ thay đổi cách tính toán gradient và cập nhật trọng số trong quá trình huấn luyện. Cụ thể, hai thuật toán này sử dụng hai phương pháp khác nhau để tính toán gradient và cập nhật trọng số, do đó việc thay đổi optimizer sẽ có tác động đến hiệu suất của mô hình."
+        "### So với model ban đầu, model được cải tiến bằng Regularization đã có sự thay đổi về độ chính xác, cụ thể ở đây em thay đổi optimizer từ Adam sang RMSprop. Thuật toán tối ưu mô hình sẽ thay đổi cách tính toán gradient và cập nhật trọng số trong quá trình huấn luyện. Cụ thể, hai thuật toán này sử dụng hai phương pháp khác nhau để tính toán gradient và cập nhật trọng số, do đó việc thay đổi optimizer sẽ có tác động đến hiệu suất của mô hình."
       ],
       "metadata": {
         "id": "6O_FsWg_jHwn"
